--- a/hw2/out.tex
+++ b/hw2/out.tex
@@ -82,7 +82,7 @@ whether to enter in the market \(m \in \{1, \dots, M\}\) or not. If firm
 \(i \in \{A, B\}\) decides to enter, its profits are given by
 
 \[
-\Pi_{i, m} = X_{i, m} \beta - D_{j, m} \alpha + \nu_m + u_{i, m}, \qquad \forall\ i, j \in \{A, B\},\ i \neq j
+\Pi_{i, m} = X_{i, m} \beta - D_{j, m} \alpha + \nu_m + u_{i, m}, \quad \forall\ i, j \in \{A, B\},\ i \neq j
 \]
 
 where \(X_{i, m}\) is an observable characteristic of firm \(i\) that
