--- a/hw2/out.tex
+++ b/hw2/out.tex
@@ -61,6 +61,17 @@ clezamaj@itam.mx}
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
+% From pandoc table feature
+\usepackage{longtable,booktabs,array}
+\usepackage{calc} % for calculating minipage widths
+% Correct order of tables after \paragraph or \subparagraph
+\usepackage{etoolbox}
+\makeatletter
+\patchcmd\longtable{\par}{\if@noskipsec\mbox{}\fi\par}{}{}
+\makeatother
+% Allow footnotes in longtable head/foot
+\IfFileExists{footnotehyper.sty}{\usepackage{footnotehyper}}{\usepackage{footnote}}
+\makesavenoteenv{longtable}
 
 
 
@@ -68,7 +79,7 @@ clezamaj@itam.mx}
 \usepackage{multirow, array}
 \setlength{\parskip}{\baselineskip}
 \newcommand{\ev}{\text{E}}
-\newcommand{\prob}{\text{Pr}}
+\newcommand{\iid}{\text{i.i.d.}}
 \newcommand{\dnorm}{\mathcal{N}}
 \newcommand{\dunif}{\mathcal{U}}
 
@@ -83,6 +94,9 @@ clezamaj@itam.mx}
 \rmfamily
 
 %  Body of the article
+\hypertarget{setup}{%
+\section{Setup}\label{setup}}
+
 Suppose there are two firms, \(A\) and \(B\), that simultaneously decide
 whether to enter in the market \(m \in \{1, \dots, M\}\) or not. If firm
 \(i \in \{A, B\}\) decides to enter, its profits are given by
@@ -131,7 +145,7 @@ defined as follows:
 Namely, the probability that firm \(A\) enters market \(m\) is
 
 \begin{align*}
-    p \left(D_{A, m = 1}\right) & = p \left( X_{A, m} \beta - \alpha p \left( D_{B, m} = 1 \right) + \nu_m + u_{A, m} > 0 \right)              \\
+    p \left(D_{A, m} = 1\right) & = p \left( X_{A, m} \beta - \alpha p \left( D_{B, m} = 1 \right) + \nu_m + u_{A, m} > 0 \right)              \\
                                     & = p \left( u_{A, m} > - \left( X_{A, m} \beta - \alpha p \left( D_{B, m} = 1 \right) + \nu_m \right) \right) \\
                                     & = \Phi \left( X_{A, m} \beta - \alpha p \left( D_{B, m} = 1 \right) + \nu_m \right)                              
 \end{align*}
@@ -146,9 +160,100 @@ Similarly,
 p \left( D_{B, m} = 1 \right) = \Phi \left( X_{B, m} \beta - \alpha p \left( D_{A, m} = 1 \right) + \nu_m \right) .
 \]
 
-Furthermore, we propose the following parametrization to simulate our
-model:
+Henceforth, let \(p_{i, m} = p(D_{i, m} = 1)\).
 
+\hypertarget{simulations}{%
+\section{Simulations}\label{simulations}}
+
+We propose the following parametrization to simulate our model:
+
+\begin{align*}
+&\alpha =  2 && X_{A,m} \sim \dunif(0, 1) \\
+&\beta = 0.2 && X_{B, m} \sim \dunif(0.1, 1.4) \\
+&\nu_m = 0.9 \times \mathbf{1} \{ m \leq 100 \} && u_{A, m}, u_{B, m} \overset{\iid}{\sim} \dnorm(0, 1)
+\end{align*}
+
+With this setup, we obtain the following entry probabilities for markets
+1, 101, 201, 301, and 401.
+
+\begin{longtable}[]{@{}ccc@{}}
+\toprule()
+\(m\) & \(p_{A, m}\) & \(p_{B, m}\) \\
+\midrule()
+\endhead
+1 & 0.6019 & 0.4001 \\
+101 & 0.3172 & 0.2766 \\
+201 & 0.3375 & 0.2805 \\
+301 & 0.3812 & 0.2503 \\
+401 & 0.2590 & 0.3362 \\
+\bottomrule()
+\end{longtable}
+
+Thus, firm \(A\) enters 165 markets while firm \(B\) enters 179.
+However, recall that Bayesian Nash equilibrium allows for ex-post regret
+where profits are negative succeeding the decision of entry. In our
+case, firm \(A\) regrets 41 times while \(B\) regrets 48---24.85\% and
+26.82\%, respectively.
+
+\hypertarget{maximum-likelihood}{%
+\section{Maximum Likelihood}\label{maximum-likelihood}}
+
+In pursuit of our estimation objectives for
+\(\theta = (\alpha, \beta, \gamma)\) such that \(\gamma\) appears in
+\(\nu_m := \gamma \times \mathbf{1} \{ m \leq 100 \}\)---i.e., we also
+want to estimate a common market fixed effect for the first 100
+markets---we define our log-likelihood function as shown below.
+
+\begin{align*}
+\log\mathcal{L}_{m} (\theta \mid \cdot) &= \sum_{m = 1}^{M} \left[ D_{A, m} D_{B, m} \log(p_{A, m} p_{B, m}) \right. \\
+&+ D_{A, m} (1 - D_{B, m}) \log(p_{A, m} (1 - p_{B, m})) \\
+&+ (1 - D_{A, m}) D_{B, m} \log((1 - p_{A, m}) p_{B, m}) \\
+&+ \left. (1 - D_{A, m}) (1 - D_{B, m}) \log((1 - p_{A, m}) (1 - p_{B, m})) \right]
+\end{align*}
+
+The maximum likelihood estimates, as well as their standard errors, are
+shown in the following table.
+
+\begin{longtable}[]{@{}ccc@{}}
+\toprule()
+Parameter & Estimate & SE \\
+\midrule()
+\endhead
+\(\alpha\) & 2.0347 & 0.1813 \\
+\(\beta\) & 0.1915 & 0.0470 \\
+\(\gamma\) & 0.7421 & 0.1865 \\
+\bottomrule()
+\end{longtable}
+
+\hypertarget{gmm}{%
+\section{GMM}\label{gmm}}
+
+With the generalized method of moments (GMM), we may want to consider up
+to the fourth moment to ensure over-identification. This way, we can
+describe an algorithm that performs GMM estimation as follows:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Compute
+  \(\theta^{(0)} = \arg\min_\theta \bar{g}(\theta)'\bar{g}(\theta)\)
+\item
+  Compute the heteroskedasticity and auto-correlation consistent matrix
+  \(\hat{\Omega} \left(\theta^{(0)}\right)\) like the one proposed by
+  \citet{HAC}
+\item
+  Compute
+  \(\theta^{(0)} = \arg\min_\theta \bar{g}(\theta)'\left[\hat{\Omega} \left(\theta^{(0)}\right)\right]^{-1}\bar{g}(\theta)\)
+\item
+  If
+  \(\left\lVert \theta^{(0)} - \theta^{(1)} \right\rVert < \text{tol}\),
+  stop. Else, \(\theta^{(0)} = \theta^{(1)}\) and repeat from 2
+\item
+  Define \(\hat{\theta} = \theta^{(1)}\)
+\end{enumerate}
+
+\bibliography{ref.bib}
 
 
 \end{document}
