--- a/hw2/preamble.tex
+++ b/hw2/preamble.tex
@@ -1,6 +1,6 @@
 \usepackage{multirow, array}
 \setlength{\parskip}{\baselineskip}
 \newcommand{\ev}{\text{E}}
-\newcommand{\prob}{\text{Pr}}
+\newcommand{\iid}{\text{i.i.d.}}
 \newcommand{\dnorm}{\mathcal{N}}
 \newcommand{\dunif}{\mathcal{U}}
