--- a/hw2/out.tex
+++ b/hw2/out.tex
@@ -162,6 +162,8 @@ p \left( D_{B, m} = 1 \right) = \Phi \left( X_{B, m} \beta - \alpha p \left( D_{
 
 Henceforth, let \(p_{i, m} = p(D_{i, m} = 1)\).
 
+\newpage
+
 \hypertarget{simulations}{%
 \section{Simulations}\label{simulations}}
 
@@ -195,6 +197,8 @@ where profits are negative succeeding the decision of entry. In our
 case, firm \(A\) regrets 41 times while \(B\) regrets 48---24.85\% and
 26.82\%, respectively.
 
+\newpage
+
 \hypertarget{maximum-likelihood}{%
 \section{Maximum Likelihood}\label{maximum-likelihood}}
 
@@ -225,6 +229,8 @@ Parameter & Estimate & SE \\
 \bottomrule()
 \end{longtable}
 
+\newpage
+
 \hypertarget{gmm}{%
 \section{GMM}\label{gmm}}
 
@@ -252,6 +258,8 @@ describe an algorithm that performs GMM estimation as follows:
 \item
   Define \(\hat{\theta} = \theta^{(1)}\)
 \end{enumerate}
+
+\newpage
 
 \bibliography{ref.bib}
 
